--- a/decisionscience.ipynb
+++ b/decisionscience.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgaaHLM1DMNj2iLm+y6Q5O",
+      "authorship_tag": "ABX9TyPJ8k4dXJMSfOmuVoCeA+J+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ry-zYdaJ-3uq",
-        "outputId": "eef3abf4-0fbd-47f1-c31c-0d8914f08ee4"
+        "outputId": "70c5b502-3767-4c37-c2e3-5f7d3c430549"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pulp\n",
             "  Downloading PuLP-2.7.0-py3-none-any.whl (14.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.3/14.3 MB\u001b[0m \u001b[31m53.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m14.3/14.3 MB\u001b[0m \u001b[31m61.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pulp\n",
             "Successfully installed pulp-2.7.0\n"
           ]
@@ -53,6 +53,17 @@
       "source": [
         "!pip install pulp"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Demo on how to use pulp\n",
+        "\n",
+        "Just to show how colab and github link together."
+      ],
+      "metadata": {
+        "id": "czmJqKsSC3yW"
+      }
     },
     {
       "cell_type": "code",
@@ -110,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mXJSSFUR_Ps-",
-        "outputId": "16ab2e18-9715-43d6-eba9-4f8592a3c18a"
+        "outputId": "497da4bd-725a-44a6-8ad8-06897cbcaca2"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,10 +170,68 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[Tutorial](https://towardsdatascience.com/linear-programming-using-python-priyansh-22b5ee888fe0#:~:text=Linear%20programming%20or%20linear%20optimization,varying%20set%20of%20decision%20variables.)"
+        "[PULP Tutorial](https://towardsdatascience.com/linear-programming-using-python-priyansh-22b5ee888fe0#:~:text=Linear%20programming%20or%20linear%20optimization,varying%20set%20of%20decision%20variables.)"
       ],
       "metadata": {
         "id": "bqM8akus_6QH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pyomo"
+      ],
+      "metadata": {
+        "id": "M4T7Lh-cDO2F",
+        "outputId": "8146e23f-f7c1-4595-a2df-a75ced1e420a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting pyomo\n",
+            "  Downloading Pyomo-6.4.4-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.1/11.1 MB\u001b[0m \u001b[31m70.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting ply\n",
+            "  Downloading ply-3.11-py2.py3-none-any.whl (49 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.6/49.6 KB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: ply, pyomo\n",
+            "Successfully installed ply-3.11 pyomo-6.4.4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyomo.environ import *\n",
+        "\n",
+        "model = AbstractModel()\n",
+        "# Nodes in the network\n",
+        "model.N = Set()\n",
+        "# Network arcs\n",
+        "model.A = Set(within=model.N*model.N)\n",
+        "# the rest is missing"
+      ],
+      "metadata": {
+        "id": "j8DTpECZDJiu"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The pyomo stuff above is from [another repo](https://github.com/Pyomo/PyomoGallery/blob/master/maxflow/maxflow.ipynb)"
+      ],
+      "metadata": {
+        "id": "jiWQtJ8JDZAt"
       }
     }
   ]
