--- a/COIN/boolean/and.tex
+++ b/COIN/boolean/and.tex
@@ -1,26 +1,6 @@
-\documentclass{beamer}
+\documentclass[xcolor={dvipsnames,rgb}]{beamer}
 
-\beamertemplatenavigationsymbolsempty
-
-\usepackage{tikz}
-
-\usetikzlibrary{positioning}
-\usetikzlibrary{shapes,arrows,calc}
-
-\definecolor{variable}{HTML}{999999}
-\definecolor{operator}{HTML}{bbbbbb}
-\definecolor{vtrue}{HTML}{66ff66}
-\definecolor{vfalse}{HTML}{ff6666}
-\definecolor{rtrue}{HTML}{aaffaa}
-\definecolor{rfalse}{HTML}{ffaaaa}
-
-\tikzstyle{label} = [minimum height=2em, minimum width=2em]
-\tikzstyle{var} = [draw, rectangle, minimum height=2em, minimum width=2em, fill=variable]
-\tikzstyle{oper} = [draw, rectangle, minimum height=2em, minimum width=2em, fill=operator]
-\tikzstyle{it} = [draw, rectangle, minimum height=2em, minimum width=2em, fill=vtrue]
-\tikzstyle{if} = [draw, rectangle, minimum height=2em, minimum width=2em, fill=vfalse]
-\tikzstyle{ot} = [draw, rectangle, minimum height=2em, minimum width=2em, fill=rtrue]
-\tikzstyle{of} = [draw, rectangle, minimum height=2em, minimum width=2em, fill=rfalse]
+\input{alldefs}
 
 \begin{document}
 
