Aesthetic line break

--- a/COIN/boolean/expr.tex
+++ b/COIN/boolean/expr.tex
@@ -81,7 +81,8 @@
       
     \end{tikzpicture}
 
-    \onslide<34-38>{Under the given \textit{assignment} to the variables, this expression evaluates to \textbf{true}.}
+    \onslide<34-38>{Under the given \textit{assignment} to the variables,}
+    \onslide<35-38>{this expression evaluates to \textbf{true}.}
     
   \end{center}
 \end{frame}
