--- a/COIN/scenarios/phone02.tex
+++ b/COIN/scenarios/phone02.tex
@@ -7,7 +7,7 @@
 
 \begin{center}
   \scalebox{2.9}{
-
+\phone{14:37}{72}{It's been brought to my attention that some drivers feel like they get assigned to routes more often than others, resulting in an inadequate balance in workload. As a bit of bright news, we got tons of positive feedback from parents whose daughters were thrilled to spot Marion driving the garbage truck \Smiley{} --- could we maybe rotate her on different routes to maximize exposure?}
   }
 \end{center}
 
