--- a/COIN/scenarios/phone03.tex
+++ b/COIN/scenarios/phone03.tex
@@ -6,7 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{\phone{16:32}{45}{Kitchen fridge unusable, again \Frowny{}! We need a large space there for Marion's birthday cake tomorrow first thing, but it's stuffed will all kinds of mouldy Tupperware. Please go clean out your things ASAP.}}
+  \scalebox{2.9}{\phone{09:12}{64}{Guys, who took Jimmy (the smallest snow plower)? We were due to clear the walking path by the lakeside this morning and it's long overdue since last week Jimmy was getting repairs. That elderly ladies' jogging club won't stop calling \Frowny{} so the front desk is losing it. We need to get it done!}}
 \end{center}
 
 \end{document}
