--- a/COIN/scenarios/phone07.tex
+++ b/COIN/scenarios/phone07.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{12:43}{54}{Hey, how's it hanging? I wrote a piece of code to calculate how many times each word appears in each forum post. Do you think we could use that to improve our spam-classifier? Cheers, Robin.}}
 \end{center}
 
 \end{document}
