--- a/COIN/scenarios/phone08.tex
+++ b/COIN/scenarios/phone08.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{15:34}{24}{That NLP video you linked me over lunch today was super cool. I already installed VADER on this laptop and you should see what it says about those polemic HR Emails from while back ;) Cheers, Robin}}
 \end{center}
 
 \end{document}
