--- a/COIN/scenarios/phone09.tex
+++ b/COIN/scenarios/phone09.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{17:03}{43}{Gentle reminder: please submit your videoclip (1 to 3 minutes) in a 1080p MP4 file by the end of the week to have it incorporated into next week's infoscreen cycle.}}
 \end{center}
 
 \end{document}
