--- a/COIN/scenarios/phone10.tex
+++ b/COIN/scenarios/phone10.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{13:29}{71}{Sorry it took so long, but your orthomosaic is finally ready. What do you want us to do with it? Cheers, Robin.}}
 \end{center}
 
 \end{document}
