--- a/COIN/scenarios/phone12.tex
+++ b/COIN/scenarios/phone12.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{15:02}{95}{I've added the list of pothole coordinates and a severity on a scale from 1 (minor annoyance) to 5 (traffic-stopper) on the website, as requested. The jogging ladies are already questioning the ratings since they were hoping the road that leads to the lakeside parking lot to be recognized as a priority, but it's listed as a two. Any ideas on how to calm them down?}}
 \end{center}
 
 \end{document}
