--- a/COIN/scenarios/phone13.tex
+++ b/COIN/scenarios/phone13.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{12:10}{23}{Good day, Sir/Madam. I saw your infomercial at the metro station and would like to hire your services. Please call me at 514 352 1931 when you have a moment.}}
 \end{center}
 
 \end{document}
