--- a/COIN/scenarios/phone04.tex
+++ b/COIN/scenarios/phone04.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{16:32}{45}{Kitchen fridge unusable, again \Frowny{}! We need a large space there for Marion's birthday cake tomorrow first thing, but it's stuffed will all kinds of mouldy Tupperware. Please go clean out your things ASAP.}}
 \end{center}
 
 \end{document}
