--- a/COIN/scenarios/phone06.tex
+++ b/COIN/scenarios/phone06.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{09:54}{32}{The forum log you requested are attached for each posting on the discussion board, indicating the author and the number of upvotes. I got the volunteers to label some of the posts either as spam or good and set the third column as none for the posts nobody looked at. Let me know if you need anything else. Cheers, Robin.}}
 \end{center}
 
 \end{document}
