--- a/COIN/scenarios/phone05.tex
+++ b/COIN/scenarios/phone05.tex
@@ -6,9 +6,7 @@
 \thispagestyle{empty}
 
 \begin{center}
-  \scalebox{2.9}{
-
-  }
+  \scalebox{2.9}{\phone{11:12}{83}{The drones are here! All six of them are in the storage room and they've been entered into the equipment booking system, however: \Stopsign{} Make sure you complete the mandatory training before attempting to fly one.}}
 \end{center}
 
 \end{document}
