minor edit while making the gist

--- a/COIN/heuristic.ipynb
+++ b/COIN/heuristic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwQTuP5grvk4IwJCniVfcV",
+      "authorship_tag": "ABX9TyOqgxtFpiTD26N81o8P5IAg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Travelling salesperson problem\n",
+        "# Traveling salesperson problem (TSP)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -56,7 +57,7 @@
       "metadata": {
         "id": "5C9edwaIXKij"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +88,7 @@
         "id": "hASUietNXWhs",
         "outputId": "48288a8a-c98c-4847-d4a5-e5d34e101909"
       },
-      "execution_count": 189,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +150,7 @@
         "id": "WtxsR-2ZY-Zf",
         "outputId": "a19ac446-3839-429e-a17b-b7f7af2acecd"
       },
-      "execution_count": 190,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +181,7 @@
       "metadata": {
         "id": "zErO-tURXIv6"
       },
-      "execution_count": 191,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +212,7 @@
         "id": "afftJR8sYbBq",
         "outputId": "35e23105-0974-4b3e-a166-137b23f6ce12"
       },
-      "execution_count": 192,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -328,7 +329,7 @@
       "metadata": {
         "id": "4x35SAOhetaI"
       },
-      "execution_count": 193,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +386,7 @@
         "id": "mZDmG745e_Wr",
         "outputId": "e065a910-af92-4d54-ad3e-69eb84913ff4"
       },
-      "execution_count": 194,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +459,7 @@
       "metadata": {
         "id": "aWGbDX45ierH"
       },
-      "execution_count": 195,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +515,7 @@
         "id": "LoG-dKpEijsT",
         "outputId": "a2dbe4e8-8cdd-4be0-9fde-a3ac3c07ddfb"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +587,7 @@
         "id": "7-avY6hZjarg",
         "outputId": "b9b32af2-7491-4ee5-9cef-f8f1047d3e05"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,7 +647,7 @@
         "id": "bYRXAoVrjtHN",
         "outputId": "ab0e6f3b-17b4-45b4-c749-b3cedd96a49c"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -704,7 +705,7 @@
         "id": "zziIDmmtnhPy",
         "outputId": "dc03e4d3-f624-41a2-d051-370bd183c928"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,7 +743,7 @@
         "id": "70wQpxocolOW",
         "outputId": "eda508af-3cfb-43a5-93e0-6d94babc3933"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -790,7 +791,7 @@
         "id": "x5GIE2Wzphwc",
         "outputId": "66f9c875-c205-495a-a9c2-a8daddec7438"
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,7 +836,7 @@
         "id": "xBU0JM2kp3rV",
         "outputId": "e89710a4-2da5-472a-8ab6-9a197075f3b3"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -878,7 +879,7 @@
       "metadata": {
         "id": "gs7tpMxMqX6K"
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -913,7 +914,7 @@
       "metadata": {
         "id": "aJgRypXBqrkF"
       },
-      "execution_count": 204,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -981,7 +982,7 @@
         "id": "tf9J64P9qzBE",
         "outputId": "44df6dc5-9bfa-4f06-859b-f3241eee6e43"
       },
-      "execution_count": 205,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1028,7 @@
         "id": "Z1B2i1FisLec",
         "outputId": "b54c7ff1-aa7c-4e43-caae-1d31a5c923e3"
       },
-      "execution_count": 206,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
