--- a/COIN/commons.ipynb
+++ b/COIN/commons.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeHkUCnkuzs0eEllPi1oQz",
+      "authorship_tag": "ABX9TyO89DM6aVOeHcsb9WY93+7Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# This is why we can't have nice things\n",
+        "\n",
         "[model](https://personal.ems.psu.edu/~dmb53/Earth_System_Models/Modeling_TOC.html)\n",
         "\n",
         "[DOI 10.1126/science.162.3859.1243](https://dx.doi.org/10.1126/science.162.3859.1243) fulltext available through the McGill Library"
@@ -39,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 181,
+      "execution_count": null,
       "metadata": {
         "id": "xwahLnNE3EIh"
       },
@@ -94,7 +96,7 @@
         "id": "CVwsUoji6HtP",
         "outputId": "3293e199-a637-48c3-fcb1-869ea8a10e99"
       },
-      "execution_count": 182,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +145,7 @@
         "id": "h3EqgHs2BB-c",
         "outputId": "472d7b28-9b1e-4b22-f9f6-036aee44c555"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +165,7 @@
       "metadata": {
         "id": "vFN0hP3u_62u"
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +189,7 @@
         "id": "-FdkJXuuD0vg",
         "outputId": "38f3ea1b-c7ce-4717-be2b-8171f745eff1"
       },
-      "execution_count": 185,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -240,7 +242,7 @@
         "id": "VH7WvPDI_VvD",
         "outputId": "f37cb770-c5ec-40ea-b0cd-224bccf661b8"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +301,7 @@
         "id": "mgmB9xYPBFJP",
         "outputId": "017f6135-5aee-4c8d-aaf9-34f7bb0db358"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +333,7 @@
         "id": "herDSBI7A2z3",
         "outputId": "42a2bbf1-d35f-469f-e34f-b17c3ccdad1d"
       },
-      "execution_count": 188,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
