having fun making up subheaders

--- a/COIN/perceptron.ipynb
+++ b/COIN/perceptron.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/WRCKJK5Kd+qx6KmUyn4g",
+      "authorship_tag": "ABX9TyO2TK5Xh0zq3luoUidJssVp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# The adjustments will continue until performance improves\n",
+        "\n",
         "We have a parameter called *learning rate* that we want to adjust as the process advances so that the perceptron can make big adjustments at the start and then fine-tune at towards the end. To enact such a slow-down, we need a *cooling rate*."
       ],
       "metadata": {
@@ -44,7 +46,7 @@
       "metadata": {
         "id": "b6GS7lhyXX_e"
       },
-      "execution_count": 274,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +75,7 @@
       "metadata": {
         "id": "3_yaF_3ua61W"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +101,7 @@
         "id": "aSU0GjpFdF8O",
         "outputId": "0fb941ad-2405-49d7-8304-f7dfbf749b23"
       },
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +155,7 @@
       "metadata": {
         "id": "SkSi932SWqox"
       },
-      "execution_count": 277,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +179,7 @@
         "id": "1JZPRkzcd8cj",
         "outputId": "e78469b4-35d6-4d64-902d-1d88d609091f"
       },
-      "execution_count": 278,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +219,7 @@
       "metadata": {
         "id": "TaTKivWaeJKs"
       },
-      "execution_count": 279,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -249,7 +251,7 @@
       "metadata": {
         "id": "7peKsfdee2D6"
       },
-      "execution_count": 280,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -273,7 +275,7 @@
         "id": "Nwj8HUscfiUj",
         "outputId": "f860d5f7-7a74-4bd9-85dc-a07ab2afa50f"
       },
-      "execution_count": 281,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,7 +326,7 @@
         "id": "8Eku5sWyhqO6",
         "outputId": "c4508f85-98f0-4ff3-fc6e-56e70866ca61"
       },
-      "execution_count": 282,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +430,7 @@
         "id": "W8lICdDyr5KV",
         "outputId": "4a121fa1-0097-493e-b371-462e454fcddd"
       },
-      "execution_count": 283,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12921,7 +12923,7 @@
       "metadata": {
         "id": "UrQ5XKa8Won_"
       },
-      "execution_count": 284,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12947,7 +12949,7 @@
         "id": "rkKNA2aUjgV6",
         "outputId": "18a9b58e-1560-465e-ec41-fb45f0bca39c"
       },
-      "execution_count": 285,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12981,7 +12983,7 @@
       "metadata": {
         "id": "C06Q8Tezjnp4"
       },
-      "execution_count": 286,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12996,7 +12998,7 @@
         "id": "0lLKOB2IkRS7",
         "outputId": "d31ed908-20a9-4502-856e-00b483ac8340"
       },
-      "execution_count": 287,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13041,7 +13043,7 @@
         "id": "8UNwgJjMkkgi",
         "outputId": "6b81da3b-5ef4-45dc-ee95-3b9679dba95f"
       },
-      "execution_count": 288,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13083,7 +13085,7 @@
       "metadata": {
         "id": "xvhMxNi9ldY4"
       },
-      "execution_count": 289,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13128,7 +13130,7 @@
         "id": "ydHFtwa2mZ9n",
         "outputId": "8e5e750c-702c-4fa2-a180-0dd48e5a96e2"
       },
-      "execution_count": 290,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13205,7 +13207,7 @@
         "id": "K_gj8iPsWMQu",
         "outputId": "26702786-2319-4639-b1b8-5fef91a2022f"
       },
-      "execution_count": 291,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13285,7 +13287,7 @@
         "id": "em1LlvA0WpE8",
         "outputId": "2eb5f0a3-1fec-4049-88ba-88c54e91683a"
       },
-      "execution_count": 292,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13337,7 +13339,7 @@
         "id": "c7js8CAS_y1q",
         "outputId": "c649b09e-05dd-492e-da71-eda442e80c64"
       },
-      "execution_count": 397,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13366,7 +13368,7 @@
         "id": "T5U5l39MAJtV",
         "outputId": "703a15dc-688d-4c5a-86fb-114497287b70"
       },
-      "execution_count": 294,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13395,7 +13397,7 @@
       "metadata": {
         "id": "7JYYNSRcabSn"
       },
-      "execution_count": 436,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13437,7 +13439,7 @@
       "metadata": {
         "id": "sA8mfBebWpjM"
       },
-      "execution_count": 452,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13461,7 +13463,7 @@
         "id": "hqjlzKr_bQKw",
         "outputId": "cddd5352-7e78-47fe-bb31-5e084670a336"
       },
-      "execution_count": 453,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13503,7 +13505,7 @@
         "id": "XEryEF5cLDFJ",
         "outputId": "6e3e8965-c40f-4744-d304-55a36c3627af"
       },
-      "execution_count": 454,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13555,7 +13557,7 @@
         "id": "0p_WkvVdCul9",
         "outputId": "a021cbd1-8156-4822-a99e-3b4013a50cb9"
       },
-      "execution_count": 466,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -13970,7 +13972,7 @@
         "id": "K99fy7KQA6GE",
         "outputId": "332c95ba-00bf-488f-efa6-35d1b0566ad0"
       },
-      "execution_count": 467,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14047,7 +14049,7 @@
         "id": "thWceDBrMdxS",
         "outputId": "d0587ddd-2f25-42c9-8d01-1e2b2fff0652"
       },
-      "execution_count": 323,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -14525,7 +14527,7 @@
         "id": "qaKDM2hoPunt",
         "outputId": "f7f694a0-956d-4cba-b4c7-f87c4635ae41"
       },
-      "execution_count": 326,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15032,7 +15034,7 @@
         "id": "VskepSr6QVUf",
         "outputId": "f7405563-1a0c-4027-b780-aa85caf257b5"
       },
-      "execution_count": 375,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -15088,7 +15090,7 @@
         "id": "R6cR24d4SnGP",
         "outputId": "436523cd-3948-4043-ca5f-aa0d23f4f4e3"
       },
-      "execution_count": 392,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15154,7 +15156,7 @@
         "id": "epzTWztaT1FR",
         "outputId": "3b644873-7d90-448a-9a72-467ea5907779"
       },
-      "execution_count": 393,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15196,7 +15198,7 @@
         "id": "Ps10WUtcUcjb",
         "outputId": "e9a4fd51-9c12-40c1-b886-ab07ed86aaa5"
       },
-      "execution_count": 394,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15683,7 +15685,7 @@
         "id": "g05twLZodHwS",
         "outputId": "2463c0c3-e37a-46ce-d036-6504786ba594"
       },
-      "execution_count": 468,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
