--- a/COIN/neural.ipynb
+++ b/COIN/neural.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJyNJNWPeBwM1G32yX4gv9",
+      "authorship_tag": "ABX9TyNudle5ZZu5kJtgFqBi67Jz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# How deep\n",
+        "\n",
         "Let's reuse our pseudorandom digit data from last module."
       ],
       "metadata": {
@@ -46,7 +48,7 @@
       "metadata": {
         "id": "PXhM1YGbaQhe"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -72,7 +74,7 @@
       "metadata": {
         "id": "BBUq46VOaXtA"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +102,7 @@
       "metadata": {
         "id": "hqc_bEiJaxz7"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +117,7 @@
         "id": "cFJewyg6bxci",
         "outputId": "b6f2457c-179d-41de-cd90-aff02062a5a5"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +147,7 @@
         "id": "F4e3CShKbyfO",
         "outputId": "47e5d9ea-58bb-4d48-ec90-e6298bf5e040"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +181,7 @@
       "metadata": {
         "id": "VD3v2DQ0b9lZ"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,7 +207,7 @@
         "id": "RnqoitDtcND5",
         "outputId": "7e2c5bf3-b750-4aef-bc91-5047c0e38b68"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +253,7 @@
         "id": "AQunGSUUcWFK",
         "outputId": "1ad6f2bb-9d07-418b-f361-1e02fbb16b7a"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "id": "qnZWBUIpVmmX"
       },
@@ -312,7 +314,7 @@
       "metadata": {
         "id": "cdq9wk4iWBnA"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -328,7 +330,7 @@
         "id": "JuEeJNhqgS5Q",
         "outputId": "15409699-7352-45c9-aa80-2e7d2a44f4b9"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +366,7 @@
         "id": "TtY6f6sBfrTk",
         "outputId": "4e97c6b8-5630-4a02-db3c-f5ad2b73dedb"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,7 +394,7 @@
         "id": "YOsotHCPWn_X",
         "outputId": "f0a37a3c-e6ec-4da7-94b8-52c62c0b060c"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +432,7 @@
       "metadata": {
         "id": "dL0Bml5Bc55c"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -448,7 +450,7 @@
         "id": "ttVEoM1En_nR",
         "outputId": "7fbf2a05-bec5-4b16-9509-4e3add6a473e"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +483,7 @@
         "id": "VqBMl5PApiF6",
         "outputId": "06bea4a7-2cec-454b-f973-14da2ebcfeec"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +546,7 @@
         "id": "SWQD9Vf3ijXN",
         "outputId": "1cba8f4c-06d8-4c41-f675-805a60c3d666"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +571,7 @@
       "metadata": {
         "id": "XE_43OwyiYvy"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -580,7 +582,7 @@
       "metadata": {
         "id": "RIidZRhhiUPa"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -592,7 +594,7 @@
       "metadata": {
         "id": "lXqFOxZ1jBQt"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -608,7 +610,7 @@
         "id": "SXo6KpYCiSWh",
         "outputId": "493be1df-2504-40db-f175-19f57621ec24"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -679,7 +681,7 @@
         "id": "1PYfUfI-uAR4",
         "outputId": "f3d7479c-b49f-4a3c-d369-4d634b520a8d"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,7 +723,7 @@
         "id": "FCuLUZ-BvWoy",
         "outputId": "956ef685-438e-40bb-86cb-0fcbede29365"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +786,7 @@
         "id": "gUcpchEddyED",
         "outputId": "a0772339-2842-45a2-cfbc-d9314d5db5d4"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
