--- a/COIN/shapley.ipynb
+++ b/COIN/shapley.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPPXSv+jUSVf0YpA1RcSSud",
+      "authorship_tag": "ABX9TyMeJqjxP7blSt7umLsmQRTD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,9 +36,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QI44uixp_R3M",
-        "outputId": "5d79fd1c-2565-4794-ea56-21dd3b677e1a"
+        "outputId": "680fa3ab-7d72-4583-b0ee-7a4d5de9fc0f"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -123,7 +123,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "That *y* is the natural logarithm of the median home price as it exceeds 100k as multiples of 10k, and rounded, too. Let's try recover approximate dollar prices by inverting that, although any rounding of the *y* values in the `shap` package will cause deviations."
+        "That *y* is the natural logarithm of the median home price as it exceeds 100k as multiples of 10k, and rounded, too.\n",
+        "\n",
+        "Let's try recover approximate dollar prices by inverting that, although any rounding of the *y* values in the `shap` package will cause deviations."
       ],
       "metadata": {
         "id": "kuPl-n8T_teT"
@@ -142,7 +144,7 @@
         "id": "7LtzpT7f_1r_",
         "outputId": "a36ad9cd-68c0-4318-ccdc-db25cf893728"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +165,7 @@
       "metadata": {
         "id": "5_xPb2M3_gdo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +183,7 @@
         "id": "-HK445yqCQbv",
         "outputId": "5c3c39ef-e413-47dc-80b1-4c5fb3bab77f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +213,7 @@
         "id": "IAockTQ-Bxxv",
         "outputId": "67936df7-cd95-4688-e19a-d9018cf70d89"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +239,7 @@
       "metadata": {
         "id": "bmOkUqonBzbB"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -247,14 +249,14 @@
         "plt.scatter(y_pred, y_test)"
       ],
       "metadata": {
-        "id": "OCGcr4SsDP5n",
-        "outputId": "65dcd1db-7703-4588-ed39-fccfffc0675a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "OCGcr4SsDP5n",
+        "outputId": "65dcd1db-7703-4588-ed39-fccfffc0675a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +290,7 @@
       "metadata": {
         "id": "YPvcwWkWAMC8"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -305,7 +307,7 @@
         "id": "tNHAtemYAjQ-",
         "outputId": "54d4c0f2-689f-4050-a83b-c11833fd5f25"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -332,7 +334,7 @@
         "id": "m2kk6IV4A9cp",
         "outputId": "3f9b2a45-62b4-47ed-cb8b-70c852b3022a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,7 +361,7 @@
         "id": "tcnsv9U5BA6P",
         "outputId": "26172572-0fd1-4420-cc7d-67a8554b9374"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -386,7 +388,7 @@
         "id": "c0h4wgiTBFRA",
         "outputId": "2eaf1c8c-f8b4-410f-abb0-6c131f67246e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
