--- a/COIN/sentiment.ipynb
+++ b/COIN/sentiment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgqxThaDlhekd6bYdWq+oX",
+      "authorship_tag": "ABX9TyM23TqZU4sfhevWxgrcn3S9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Happy or sad\n",
+        "\n",
+        "This is a very brief starter code to dip our feet into the waters of applying transformers in NLP, particularly sentiment analysis,"
+      ],
+      "metadata": {
+        "id": "t8wX1GsFeFNb"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +74,7 @@
       "metadata": {
         "id": "RGHEe0CoK4dg"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +86,7 @@
       "metadata": {
         "id": "bUmA8VaNK-jL"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +102,7 @@
         "id": "tUFctZ5iLvUa",
         "outputId": "68d3995c-ad17-4407-b174-3718751724ad"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
