--- a/COIN/towers.ipynb
+++ b/COIN/towers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLP0bVCL4Mzo0oF6aAJ9Ia",
+      "authorship_tag": "ABX9TyNYqY3hu+epJyPXQ8zIIJMp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Back and forth\n",
+        "\n",
+        "We will visualize the game \"Tower of Hanoi\" and sort out one possible way of solving it."
+      ],
+      "metadata": {
+        "id": "9fksDsaee9bJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "rodCount = 3\n",
@@ -35,12 +46,12 @@
       "metadata": {
         "id": "vmBLwJLrX2Cz"
       },
-      "execution_count": 1142,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1143,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,7 +89,7 @@
         "id": "p9ey1-z_XyJH",
         "outputId": "3b787d59-4f12-4b50-e49f-6e361aa96bc4"
       },
-      "execution_count": 1144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -107,7 +118,7 @@
         "id": "6J9GcxgqYG3i",
         "outputId": "1193f300-6959-4c0d-b7b0-3191f52ac67f"
       },
-      "execution_count": 1145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,7 +147,7 @@
       "metadata": {
         "id": "Hx7U435IZKCw"
       },
-      "execution_count": 1146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -154,7 +165,7 @@
       "metadata": {
         "id": "7RrWDqxIYog9"
       },
-      "execution_count": 1147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +180,7 @@
         "id": "UKKsoIClZfCY",
         "outputId": "64d63a14-654f-413a-f716-3a866d000544"
       },
-      "execution_count": 1148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +241,7 @@
         "id": "jEUGNef3ZhLG",
         "outputId": "1be32c51-2205-4b31-a29e-9ea290c146b6"
       },
-      "execution_count": 1149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -292,7 +303,7 @@
       "metadata": {
         "id": "Q-ueoTAyfi2B"
       },
-      "execution_count": 1150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +314,7 @@
       "metadata": {
         "id": "tBm_lyVIiMJi"
       },
-      "execution_count": 1151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -329,7 +340,7 @@
         "id": "Nw8HhTrg3yD4",
         "outputId": "caa1b151-625c-40d5-ba26-4fc4d0476c32"
       },
-      "execution_count": 1152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -358,7 +369,7 @@
         "id": "akZr6NpJz2lr",
         "outputId": "4e736807-86fe-459f-9153-38d286aae988"
       },
-      "execution_count": 1153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +404,7 @@
         "id": "gZLQeKl8uZng",
         "outputId": "d9fa98be-c944-4299-c3b6-da5cfe43e69d"
       },
-      "execution_count": 1154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
